crates/parser/tests/parse/imports-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..236
  MODULE@0..235
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_IMPORT@10..21
      L_PAREN@10..11 "("
      KEYWORD@11..17 "import"
      WHITESPACE@17..18 " "
      ERROR@18..19 "("
      ERROR@19..20 ")"
      R_PAREN@20..21 ")"
    WHITESPACE@21..24 "\n  "
    MODULE_FIELD_IMPORT@24..35
      L_PAREN@24..25 "("
      KEYWORD@25..31 "import"
      WHITESPACE@31..32 " "
      MODULE_NAME@32..34
        STRING@32..34 "\"\""
      R_PAREN@34..35 ")"
    WHITESPACE@35..38 "\n  "
    MODULE_FIELD_IMPORT@38..52
      L_PAREN@38..39 "("
      KEYWORD@39..45 "import"
      WHITESPACE@45..46 " "
      MODULE_NAME@46..48
        STRING@46..48 "\"\""
      WHITESPACE@48..49 " "
      NAME@49..51
        STRING@49..51 "\"\""
      R_PAREN@51..52 ")"
    WHITESPACE@52..55 "\n  "
    MODULE_FIELD_IMPORT@55..69
      L_PAREN@55..56 "("
      KEYWORD@56..62 "import"
      WHITESPACE@62..63 " "
      MODULE_NAME@63..65
        STRING@63..65 "\"\""
      WHITESPACE@65..66 " "
      ERROR@66..67 "("
      ERROR@67..68 ")"
      R_PAREN@68..69 ")"
    WHITESPACE@69..72 "\n  "
    MODULE_FIELD_IMPORT@72..89
      L_PAREN@72..73 "("
      KEYWORD@73..79 "import"
      WHITESPACE@79..80 " "
      MODULE_NAME@80..82
        STRING@80..82 "\"\""
      WHITESPACE@82..83 " "
      NAME@83..85
        STRING@83..85 "\"\""
      WHITESPACE@85..86 " "
      ERROR@86..87 "("
      ERROR@87..88 ")"
      R_PAREN@88..89 ")"
    WHITESPACE@89..92 "\n  "
    MODULE_FIELD_IMPORT@92..114
      L_PAREN@92..93 "("
      KEYWORD@93..99 "import"
      WHITESPACE@99..100 " "
      MODULE_NAME@100..102
        STRING@100..102 "\"\""
      WHITESPACE@102..103 " "
      NAME@103..105
        STRING@103..105 "\"\""
      WHITESPACE@105..106 " "
      IMPORT_DESC_TYPE_USE@106..113
        L_PAREN@106..107 "("
        KEYWORD@107..111 "func"
        WHITESPACE@111..112 " "
        R_PAREN@112..113 ")"
      R_PAREN@113..114 ")"
    WHITESPACE@114..117 "\n  "
    MODULE_FIELD_IMPORT@117..140
      L_PAREN@117..118 "("
      KEYWORD@118..124 "import"
      WHITESPACE@124..125 " "
      MODULE_NAME@125..127
        STRING@125..127 "\"\""
      WHITESPACE@127..128 " "
      NAME@128..130
        STRING@128..130 "\"\""
      WHITESPACE@130..131 " "
      IMPORT_DESC_TABLE_TYPE@131..139
        L_PAREN@131..132 "("
        KEYWORD@132..137 "table"
        WHITESPACE@137..138 " "
        R_PAREN@138..139 ")"
      R_PAREN@139..140 ")"
    WHITESPACE@140..143 "\n  "
    MODULE_FIELD_IMPORT@143..167
      L_PAREN@143..144 "("
      KEYWORD@144..150 "import"
      WHITESPACE@150..151 " "
      MODULE_NAME@151..153
        STRING@151..153 "\"\""
      WHITESPACE@153..154 " "
      NAME@154..156
        STRING@154..156 "\"\""
      WHITESPACE@156..157 " "
      IMPORT_DESC_MEMORY_TYPE@157..166
        L_PAREN@157..158 "("
        KEYWORD@158..164 "memory"
        WHITESPACE@164..165 " "
        R_PAREN@165..166 ")"
      R_PAREN@166..167 ")"
    WHITESPACE@167..170 "\n  "
    MODULE_FIELD_IMPORT@170..194
      L_PAREN@170..171 "("
      KEYWORD@171..177 "import"
      WHITESPACE@177..178 " "
      MODULE_NAME@178..180
        STRING@178..180 "\"\""
      WHITESPACE@180..181 " "
      NAME@181..183
        STRING@181..183 "\"\""
      WHITESPACE@183..184 " "
      IMPORT_DESC_GLOBAL_TYPE@184..193
        L_PAREN@184..185 "("
        KEYWORD@185..191 "global"
        WHITESPACE@191..192 " "
        R_PAREN@192..193 ")"
      R_PAREN@193..194 ")"
    WHITESPACE@194..197 "\n  "
    MODULE_FIELD_FUNC@197..212
      L_PAREN@197..198 "("
      KEYWORD@198..202 "func"
      WHITESPACE@202..203 " "
      IMPORT@203..211
        L_PAREN@203..204 "("
        KEYWORD@204..210 "import"
        R_PAREN@210..211 ")"
      R_PAREN@211..212 ")"
    WHITESPACE@212..215 "\n  "
    MODULE_FIELD_FUNC@215..233
      L_PAREN@215..216 "("
      KEYWORD@216..220 "func"
      WHITESPACE@220..221 " "
      IMPORT@221..232
        L_PAREN@221..222 "("
        KEYWORD@222..228 "import"
        WHITESPACE@228..229 " "
        MODULE_NAME@229..231
          STRING@229..231 "\"\""
        R_PAREN@231..232 ")"
      R_PAREN@232..233 ")"
    WHITESPACE@233..234 "\n"
    R_PAREN@234..235 ")"
  WHITESPACE@235..236 "\n"

error: expected import module name
  ┌─ imports-malformed.wat:2:11
  │
2 │   (import ())
  │           ^

error: expected import name
  ┌─ imports-malformed.wat:2:11
  │
2 │   (import ())
  │           ^

error: expected import descriptor
  ┌─ imports-malformed.wat:2:11
  │
2 │   (import ())
  │           ^

error: unexpected token
  ┌─ imports-malformed.wat:2:12
  │
2 │   (import ())
  │            ^

error: expected import name
  ┌─ imports-malformed.wat:3:13
  │
3 │   (import "")
  │             ^

error: expected import descriptor
  ┌─ imports-malformed.wat:3:13
  │
3 │   (import "")
  │             ^

error: expected import descriptor
  ┌─ imports-malformed.wat:4:16
  │
4 │   (import "" "")
  │                ^

error: expected import name
  ┌─ imports-malformed.wat:5:14
  │
5 │   (import "" ())
  │              ^

error: expected import descriptor
  ┌─ imports-malformed.wat:5:14
  │
5 │   (import "" ())
  │              ^

error: unexpected token
  ┌─ imports-malformed.wat:5:15
  │
5 │   (import "" ())
  │               ^

error: expected import descriptor
  ┌─ imports-malformed.wat:6:17
  │
6 │   (import "" "" ())
  │                 ^

error: unexpected token
  ┌─ imports-malformed.wat:6:18
  │
6 │   (import "" "" ())
  │                  ^

error: expected type use
  ┌─ imports-malformed.wat:7:23
  │
7 │   (import "" "" (func ))
  │                       ^

error: expected table type
  ┌─ imports-malformed.wat:8:24
  │
8 │   (import "" "" (table ))
  │                        ^

error: expected memory type
  ┌─ imports-malformed.wat:9:25
  │
9 │   (import "" "" (memory ))
  │                         ^

error: expected global type
   ┌─ imports-malformed.wat:10:25
   │
10 │   (import "" "" (global ))
   │                         ^

error: expected import module name
   ┌─ imports-malformed.wat:11:16
   │
11 │   (func (import))
   │                ^

error: expected import name
   ┌─ imports-malformed.wat:11:16
   │
11 │   (func (import))
   │                ^

error: expected import name
   ┌─ imports-malformed.wat:12:19
   │
12 │   (func (import ""))
   │                   ^
